name:                emoji-yml
version:             0.1.0.0
synopsis:            A list of emoji with associated metadata, in YAML format.
description:         See README.md
license:             PublicDomain
author:              siddharthist
maintainer:          langston.barrett@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable emoji.yml
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.9,
                       base-unicode-symbols,
                       xml-conduit > 1.3 && < 2.0,
                       data-default > 0.5 && < 1.0,
                       text > 1.2 && < 2.0,
                       yaml > 0.8 && < 1.0,
                       aeson > 0.9 && < 1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
